[gd_scene load_steps=6 format=3 uid="uid://bk2a1lbtl22lg"]

[ext_resource type="Script" uid="uid://bbkh85uan0nok" path="res://scenes/bosses/basic_earth_asteroid.gd" id="1_rv6v6"]
[ext_resource type="Texture2D" uid="uid://bs08buf1826yx" path="res://assets/asteroids/bruteAsteroid.png" id="2_byjdk"]
[ext_resource type="Texture2D" uid="uid://cf4k2xcmuddvs" path="res://assets/healthbarUnder.png" id="2_rv6v6"]
[ext_resource type="Texture2D" uid="uid://b65787faudu7v" path="res://assets/healthbarProgress.png" id="3_byjdk"]
[ext_resource type="Script" uid="uid://sjxqn0uaap86" path="res://scenes/game/healthbar.gd" id="4_m2826"]

[node name="BasicEarthAsteroid" type="Area2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_rv6v6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(3.52842, 1.58057)
texture = ExtResource("2_byjdk")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(27, -334, 447, -273, 757, -96, 728, 123, 466, 269, -18, 334, -515, 311, -735, 93, -760, -107, -506, -259)

[node name="Healthbar" type="TextureProgressBar" parent="."]
texture_filter = 1
offset_left = -649.0
offset_top = 18.0
offset_right = 650.0
offset_bottom = 58.0
nine_patch_stretch = true
texture_under = ExtResource("2_rv6v6")
texture_progress = ExtResource("3_byjdk")
script = ExtResource("4_m2826")

[node name="AsteroidTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="health_depleted" from="Healthbar" to="." method="_on_healthbar_health_depleted"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_asteroid_timer_timeout"]
